--- a/Src/WebUI/Pages/Shared/_LoginPartial.cshtml
+++ b/Src/WebUI/Pages/Shared/_LoginPartial.cshtml
@@ -2,7 +2,6 @@
 @using Microsoft.AspNetCore.Identity
 @using Northwind.Infrastructure
 @inject SignInManager<ApplicationUser> SignInManager
-@inject UserManager<ApplicationUser> UserManager
 
 @{
     string returnUrl = null;
@@ -17,7 +16,7 @@
     @if (SignInManager.IsSignedIn(User))
     {
         <li class="nav-item text-nowrap p-2">
-            <a class="nav-link" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
+            <a class="nav-link" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity!.Name!</a>
         </li>
         <li class="nav-item text-nowrap p-2">
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="/">
